variables set for project

--- a/less/navs.less
+++ b/less/navs.less
@@ -71,7 +71,7 @@
 .nav-list > .active > a:hover {
   color: @white;
   text-shadow: 0 -1px 0 rgba(0,0,0,.2);
-  background-color: @linkColor;
+  background-color: @linkColorHover;
 }
 .nav-list [class^="icon-"],
 .nav-list [class*=" icon-"] {
